# dicers

./: .gitmodules  Cargo.toml  README.md
dice-sys/: Cargo.toml  build.rs
dice-sys/src/: events.rs  lib.rs
dicers/: Cargo.toml
dicers/src/: lib.rs
tests/: atomic_test  atomic_test.cc  malloc_example
